# rp2040_minimal_template

./: Cargo.toml  README.md  memory.x  picoprobe.cfg  rp2040.cfg
.cargo/: config  config.toml
src/: main.rs
src/bsp/: mod.rs  prelude.rs
