[package]
name = "{{crate_name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.1"
rp2040-hal = "0.7.0"
rp2040-pac = "0.4.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
